--- a/webservice/package.json
+++ b/webservice/package.json
@@ -6,17 +6,14 @@
     "start": "nodejs ./bin/www"
   },
   "dependencies": {
-    "body-parser":"~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
+    "body-parser": "^1.0.2",
     "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
     "debug": "~0.7.4",
+    "express": "~4.0.0",
     "jade": "~1.3.0",
+    "mongodb": "~2.0.33",
     "monk": "~1.0.1",
-    "mongodb": "~2.0.33"
+    "morgan": "~1.0.0",
+    "static-favicon": "~1.0.0"
   }
 }
