--- a/ControlPoint/app/src/main/AndroidManifest.xml
+++ b/ControlPoint/app/src/main/AndroidManifest.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="controlpoint.com.br.controlpoint" >
+    package="controlpoint.com.br.controlpoint"
+    android:versionCode="1"
+    android:versionName="1.0">
+
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_clinic"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -19,7 +27,6 @@
 
         <activity
             android:name=".ScheduleActivity">
-
         </activity>
     </application>
 
