--- a/ControlPoint/app/src/main/AndroidManifest.xml
+++ b/ControlPoint/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="controlpoint.com.br.controlpoint"
+    package="rest.controlpoint.cliniconline"
     android:versionCode="1"
     android:versionName="1.0">
 
@@ -12,21 +12,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_clinic"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name="rest.controlpoint.cliniconline.MainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".ScheduleActivity">
         </activity>
     </application>
 
